# tidy-env

./: .gitignore  Cargo.toml  README.md  plan.md  test.txt
crates/core/: Cargo.toml
crates/core/src/: agent.rs  gen.rs  language.rs  lib.rs  object.rs  sim.rs
crates/ffi_py/: Cargo.toml  README.md  example_usage.py  pyproject.toml
crates/ffi_py/src/: lib.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
examples/: test.txt
examples/python_sim/: README.md  activate.sh  demo_api_usage.py  interactive_sim.py  navigation_demo.py  pathfinding_validator.py  visual_sim.py
examples/vue_viewer/: package-lock.json  package.json  test.txt  vite.config.js
examples/vue_viewer/src/: App.vue  style.css
